test: 산책 활동 통계 서비스 시나리오 강화
- 일간 산책의 거리·시간·횟수와 상세 내역, 기록이 없는 날의 빈 응답을 검증
- 주간 통계는 전체 요약, 반려견별 활동 비중, 이전 주 대비 증감과 반려견 미등록 예외를 확인
- 월간 통계는 최근 활동 월 요약과 선택 월의 일별 기여도를 실제 단위 변환 결과까지 검증하도록 테스트 데이터를 구체화